# yadoms

sources/: CMakeLists.txt
sources/dbCommon/: CMakeLists.txt  stdafx.h
sources/dbCommon/dbCommon/: DatabaseColumn.cpp  DatabaseColumn.h  DatabaseException.hpp  DatabaseTables.cpp  DatabaseTables.h  DatabaseTablesHelpers.hpp  IDataBackup.h  IDataBackupClientStrings.h  IDatabaseEngine.h  IDatabaseRequester.h  IResultHandler.h  ITableCreationScriptProvider.h  ITransactionalProvider.h  Query.cpp  Query.h  QuerySpecializations.h
sources/dbCommon/dbCommon/adapters/: AdapterHelpers.hpp  DatabaseAdapters.cpp  DatabaseAdapters.h  GenericAdapter.cpp  GenericAdapter.h  HighchartValueAdapter.hpp  IResultAdapter.h  MultipleValueAdapter.hpp  SingleValueAdapter.hpp  SqlExtension.hpp
sources/dbCommon/dbCommon/entities/: Entities.cpp  Entities.h  EntityHelpers.hpp
sources/external-libs/: CMakeLists.txt
sources/external-libs/SQLite/: CMakeLists.txt
sources/pgsql-adapter/: CMakeLists.txt  PgsqlOptions.cpp  PgsqlOptions.h  PgsqlQuery.h  PgsqlRequester.cpp  PgsqlRequester.h  PgsqlResultHandler.h  PgsqlSqlState.cpp  PgsqlSystemTables.cpp  PgsqlSystemTables.h  PgsqlTableCreationScriptProvider.h  pgsql-adapter.cpp  stdafx.h
sources/plugins/MailSender/: CMakeLists.txt
sources/plugins/MegatecUps/: MegatecUpsFactory.cpp
sources/plugins/OneWire/: IConfiguration.h
sources/plugins/RfxLanXpl/: stdafx.h
sources/plugins/RfxLanXpl/xplcore/: XplActor.cpp  XplHelper.cpp
sources/plugins/Rfxcom/: RfxcomFactory.cpp
sources/plugins/Rfxcom/rfxcomMessages/: RFXtrxHelpers.cpp  TransceiverStatus.cpp
sources/plugins/TeleInfoUSB/: TeleInfoFactory.cpp  Transceiver.cpp
sources/plugins/TeleInfoUSB/Keywords/: ForecastTomorrow.cpp  RunningPeriod.cpp
sources/plugins/WeatherUnderGround/: ErrorAnswerHandler.cpp
sources/plugins/WeatherUnderGround/specificHistorizers/: ForecastHelpers.cpp
sources/plugins/ZWave/: ZWave.cpp
sources/plugins/dev-FakePlugin/: FakePluginConfiguration.cpp
sources/server/: IPathProvider.h  PathProvider.cpp  PathProvider.h  Supervisor.cpp  stdafx.h
sources/server/authentication/: BasicAuthentication.cpp  BasicAuthentication.h
sources/server/automation/: IRuleManager.h  Rule.cpp  Rule.h  RuleManager.cpp  RuleManager.h
sources/server/automation/script/: Properties.cpp  Properties.h  YScriptApiImplementation.cpp
sources/server/dataAccessLayer/: AcquisitionHistorizer.cpp  ConfigurationManager.cpp  ConfigurationManager.h  DeviceManager.cpp  DeviceManager.h  EventLogger.cpp  EventLogger.h  IConfigurationManager.h  IDeviceManager.h  IEventLogger.h  IKeywordManager.h  KeywordManager.cpp  KeywordManager.h
sources/server/database/: DataBackupClientStrings.cpp  DataBackupClientStrings.h  Factory.cpp  Factory.h  IAcquisitionRequester.h  IConfigurationRequester.h  IDataProvider.h  IDeviceRequester.h  IEventLoggerRequester.h  IKeywordRequester.h  IPageRequester.h  IPluginEventLoggerRequester.h  IPluginRequester.h  IRecipientRequester.h  IRuleRequester.h  IWidgetRequester.h
sources/server/database/common/: DataProvider.cpp  DataProvider.h  PurgeTask.cpp  PurgeTask.h  Query.h  QuerySpecializations.h  SummaryDataTask.cpp  SummaryDataTask.h
sources/server/database/sqlite/: SQLiteOptions.cpp  SQLiteOptions.h  SQLiteQuery.h  SQLiteRequester.cpp  SQLiteRequester.h  SQLiteResultHandler.h  SQLiteSystemTables.cpp  SQLiteSystemTables.h  SQLiteTableCreationScriptProvider.h
sources/server/location/: Location.cpp
sources/server/notification/acquisition/: Notification.hpp
sources/server/notification/basic/: Notification.hpp
sources/server/notification/summary/: Notification.hpp
sources/server/pluginSystem/: BasicQualifier.cpp  BasicQualifier.h  Factory.cpp  Factory.h  IFactory.h  IInstance.h  IndicatorQualifier.cpp  Information.cpp  Instance.cpp  Instance.h  InstanceStateHandler.cpp  InstanceStateHandler.h  IpcAdapter.cpp  Manager.cpp  Manager.h  yPluginApiImplementation.cpp  yPluginApiImplementation.h
sources/server/pluginSystem/internalPlugin/: Instance.cpp  Instance.h
sources/server/startupOptions/: IStartupOptions.h  StartupOptions.h
sources/server/task/: Instance.cpp  Scheduler.cpp
sources/server/task/backup/: Database.cpp  Database.h
sources/server/update/info/: UpdateSite.cpp
sources/server/update/worker/: Plugin.cpp  ScriptInterpreter.cpp  WorkerTools.cpp
sources/server/web/poco/: WebSocketRequestHandler.cpp
sources/server/web/ws/: AcquisitionSummaryUpdateFrame.cpp  AcquisitionSummaryUpdateFrame.h  AcquisitionUpdateFrame.cpp  AcquisitionUpdateFrame.h  LogEventFrame.cpp  LogEventFrame.h  NewDeviceFrame.cpp  NewDeviceFrame.h
sources/shared/: CMakeLists.txt  stdafx.h
sources/shared/linux/shared/: DynamicLibrary.cpp  FileSystemExtension.cpp  FileSystemExtension.h  NetworkHelper.cpp  NetworkHelper.h  Peripherals.cpp  Peripherals.h
sources/shared/shared/communication/: AsyncSerialPort.cpp  AsyncSerialPort.h  AsyncSerialPortPimpl.cpp  AsyncSerialPortPimpl.h  AsyncTcpClient.cpp  AsyncTcpClient.h  AsyncTcpClientPimpl.cpp  AsyncTcpClientPimpl.h  PortException.hpp
sources/shared/shared/exception/: Exception.hpp
sources/shared/shared/versioning/: Version.cpp
sources/shared/shared/web/: FileDownloader.cpp  FileDownloader.h
sources/shared/windows/shared/: DynamicLibrary.cpp  FileSystemExtension.cpp  FileSystemExtension.h  NetworkHelper.cpp  NetworkHelper.h  Peripherals.cpp  Thread.cpp  Thread.h
sources/sqlite-adapter/: CMakeLists.txt  SQLiteOptions.cpp  SQLiteOptions.h  SQLiteQuery.cpp  SQLiteQuery.h  SQLiteRequester.cpp  SQLiteRequester.h  SQLiteResultHandler.cpp  SQLiteResultHandler.h  SQLiteSystemTables.cpp  SQLiteSystemTables.h  SQLiteTableCreationScriptProvider.cpp  SQLiteTableCreationScriptProvider.h  sqlite-adapter.cpp
sources/www/: package.json
sources/www-old/locales/: en.json  fr.json
sources/www/config/: webpack.common.js  webpack.dev.js
sources/www/public/css/: bootstrap-non-responsive.css  styles.css  widget.css  yadoms.css
sources/www/src/: index.html  vendor.ts
sources/www/src/app/: app.component.css  app.component.html  (+3 more)
(+76 files in other folders)
